# time-tracker

./: .env.example  package.json  vite.config.ts
.github/workflows/: ci.yml  frontend.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .pnp.cjs  index.html  jest.config.js  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnalyticsCharts.tsx  CategoryManager.tsx  TimeTracker.tsx
frontend/src/store/: timeTrackerStore.ts
src/: App.tsx
src/components/: AnalyticsCharts.tsx  CategoryManager.tsx  TimeTracker.tsx
src/hooks/: useStore.ts
src/store/: StoreContext.tsx  timeTrackerStore.ts
src/store/__tests__/: timeTrackerStore.test.ts
src/utils/: TimeTrackerUtils.ts
src/utils/__tests__/: TimeTracker.utils.test.ts
